--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "Good-ReadMe-generator",
+  {
+  "name": "static-site",
   "version": "1.0.0",
-  "description": "Generate a README from user input to prompted questions",
+  "description": "Command-line application that uses input from a user to dynamically generate a README for a GitHub project.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fbabauta/Good-ReadMe-generator.git"
-  },
+  
   "author": "Francine Babauta",
   "license": "ISC",
-  "bugs":{
-  "url": "https://github.com/fbabauta/Good-ReadMe-generator/issues"
-  },
-  "homepage": "https://github.com/fbabauta/Good-ReadMe-generator#readme",
-  "dependencies": {
     "axios": "^0.19.2",
-    "dedent": "^0.7.0",
-    "inquirer": "^7.1.0",
-    "util": "^0.12.2"
+    "inquirer": "^7.3.3",
   }
 }
