--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "static-site",
+  "name": "good-readme-generator",
   "version": "1.0.0",
-  "description": "Command-line application that uses input from a user to dynamically generate a README for a GitHub project.",
+  "description": "\"Command-line application that uses input from a user to dynamically generate a README for a Github project.\"",
   "main": "index.js",
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "^3.4.3"
+  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fbabauta/Good-ReadMe-generator.git"
+  },
   "author": "Francine Babauta",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^0.19.0",
-    "inquirer": "^6.3.1"
-  }
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fbabauta/Good-ReadMe-generator/issues"
+  },
+  "homepage": "https://github.com/fbabauta/Good-ReadMe-generator#readme"
 }
