--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "good-readme-generator",
   "version": "1.0.0",
-  "description": "\"Command-line application that uses input from a user to dynamically generate a README for a Github project.\"",
+  "description": "Command-line application that uses input from a user to dynamically generate a README for a Github project.",
   "main": "index.js",
   "dependencies": {
     "axiom": "^0.1.6",
