--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "Command-line application that uses input from a user to dynamically generate a README for a Github project.",
   "main": "index.js",
-    "scripts": {
+  "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Francine Babauta",
   "license": "MIT",
   "dependencies": {
     "axiom": "^0.1.6",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "util": "^0.12.3"
   }
 }
